--- a/public/modules/calendarevents/views/view-calendarevent.client.view.html
+++ b/public/modules/calendarevents/views/view-calendarevent.client.view.html
@@ -1,19 +1,19 @@
 <section data-ng-controller="CalendareventsController" data-ng-init="findOne()">
-	<div class="page-header">
-	  <h1 data-ng-bind="calendarevent.name"></h1>
-          <h2 data-ng-bind="calendarevent.description"></h2>
-          <p data-ng-bind="calendarevent.startDate"/> -
-                    <p data-ng-bind="calendarevent.endDate"/>
-	</div>
-	<div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == calendarevent.user._id))">
-		<a class="btn btn-primary" href="/#!/calendarevents/{{calendarevent._id}}/edit">
-			<i class="glyphicon glyphicon-edit"></i>
-		</a>
-		<a class="btn btn-primary" data-ng-click="remove();">
-			<i class="glyphicon glyphicon-trash"></i>
-		</a>
-	</div>
-	<small>
+    <div class="page-header">
+        <h1 data-ng-bind="calendarevent.name"></h1>
+        <h2 data-ng-bind="calendarevent.description"></h2>
+        <p data-ng-bind="calendarevent.startDate" /> -
+        <p data-ng-bind="calendarevent.endDate" />
+    </div>
+    <div class="pull-right" data-ng-show="((authentication.user) && (authentication.user._id == calendarevent.user._id))">
+        <a class="btn btn-primary" href="/#!/calendarevents/{{calendarevent._id}}/edit">
+            <i class="glyphicon glyphicon-edit"></i>
+        </a>
+        <a class="btn btn-primary" data-ng-click="remove();">
+            <i class="glyphicon glyphicon-trash"></i>
+        </a>
+    </div>
+    <small>
           <br/>
 		<em class="text-muted">
 			Posted on
@@ -22,5 +22,10 @@
 			<span data-ng-bind="calendarevent.user.displayName"></span>
 		</em>
 	</small>
-
+    <br/>
+</section>
+<section data-ng-controller="CalendarMapController">
+    <div>
+      <leaflet width="100%" height="480px" center="center" defaults="defaults"></leaflet>
+    </div>
 </section>
