--- a/public/modules/calendarevents/views/create-calendarevent.client.view.html
+++ b/public/modules/calendarevents/views/create-calendarevent.client.view.html
@@ -12,6 +12,7 @@
                       <input type="text" data-ng-model="description" id="description" class="form-control" placeholder="Description">
                       <input type="datetime-local" data-ng-model="startDate" id="startDate" class="form-control">
                       <input type="datetime-local" data-ng-model="endDate" id="endDate" class="form-control">
+                      <input type="text" data-ng-model="address" id="address" class="form-control" placeholder="Address">
                     </div>
                 </div>
                 <div class="form-group">
