--- a/public/modules/calendarevents/views/view-calendarevent.client.view.html
+++ b/public/modules/calendarevents/views/view-calendarevent.client.view.html
@@ -26,6 +26,6 @@
 </section>
 <section data-ng-controller="CalendarMapController" data-ng-init="findOne()">
     <div>
-      <leaflet width="100%" height="480px" center="center" defaults="defaults" markers="markers"></leaflet>
+      <leaflet width="100%" height="480px" center="center" defaults="defaults" paths="paths" markers="markers"></leaflet>
     </div>
 </section>
