--- a/public/modules/calendarevents/views/create-calendarevent.client.view.html
+++ b/public/modules/calendarevents/views/create-calendarevent.client.view.html
@@ -15,9 +15,11 @@
 
                       <label class="control-label" for="startDate">Start Date</label>
                       <input type="date" data-ng-model="startDate" max="{{endDate}}" id="startDate" class="form-control dateInput">
+                      <input type="time" data-ng-model="startTime" data-ng-disabled="startDate==null" id="startTime" class="form-control dateInput">
 
                       <label class="control-label" for="endDate">End Date</label>
                       <input type="date" data-ng-disabled="startDate==null" min="{{startDate}}" data-ng-model="endDate" id="endDate" class="form-control dateInput">
+                      <input type="time" data-ng-model="endTime" data-ng-disabled="endDate==null" id="endTime" class="form-control dateInput">
 
                       <label class="control-label" for="address">Address</label>
                       <input type="text" data-ng-model="address" id="address" class="form-control" placeholder="Address">
