--- a/public/modules/calendarevents/views/list-calendarevents.client.view.html
+++ b/public/modules/calendarevents/views/list-calendarevents.client.view.html
@@ -1,8 +1,66 @@
-<section data-ng-controller="CalendareventsController" data-ng-init="find()">
+<section>
     <div class="page-header">
         <h1>Events</h1>
+
+        <div ng-controller="ModalDemoCtrl">
+            <script type="text/ng-template" id="myModalContent.html">
+
+
+                <div class="modal-header">
+                    <h3 class="modal-title">Create Event!</h3>
+                </div>
+
+                <form class="form-horizontal" data-ng-submit="create()" novalidate>
+                    <fieldset>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <div class="controls">
+                                    <label class="control-label" for="name">Name</label>
+                                    <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+
+                                    <label class="control-label" for="description">Description</label>
+                                    <input type="text" data-ng-model="description" id="description" class="form-control" placeholder="Description">
+
+                                    <label class="control-label" for="startDate">Start Date</label>
+                                    <input type="date" data-ng-model="startDate" max="{{endDate}}" id="startDate" class="form-control dateInput">
+                                    <input type="time" data-ng-model="startTime" data-ng-disabled="startDate==null" id="startTime" class="form-control dateInput">
+
+                                    <label class="control-label" for="endDate">End Date</label>
+                                    <input type="date" data-ng-disabled="startDate==null" min="{{startDate}}" data-ng-model="endDate" id="endDate" class="form-control dateInput">
+                                    <input type="time" data-ng-model="endTime" data-ng-disabled="endDate==null" id="endTime" class="form-control dateInput">
+
+                                    <label class="control-label" for="address">Address</label>
+                                    <input type="text" data-ng-model="address" id="address" class="form-control" placeholder="Address">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="form-group">
+                                <input type="submit" class="btn btn-default">
+                            </div>
+                            <div data-ng-show="error" class="text-danger">
+                                <strong data-ng-bind="error"></strong>
+                            </div>
+
+                            <button class="btn btn-primary" ng-click="ok()">OK</button>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+                        </div>
+
+                    </fieldset>
+                </form>
+
+            </script>
+            <button class="btn btn-default" ng-click="open('lg')">Large modal</button>
+        </div>
+
+
+
     </div>
-    <div class="list-group">
+
+
+
+    <div data-ng-controller="CalendareventsController" data-ng-init="find()" class="list-group">
         <div data-ng-repeat="calendarevent in calendarevents | orderBy: 'startDate'" class="list-group-item">
             <a data-ng-href="#!/calendarevents/{{calendarevent._id}}">
                 <h4 class="list-group-item-heading" data-ng-bind="calendarevent.name"></h4> Start: {{getDateString(calendarevent.startDate)}}
