--- a/style/style.scss
+++ b/style/style.scss
@@ -24,6 +24,19 @@ body{
     background-color:rgba(255,255,255,0.9);
 }
 
+#logo{
+    padding:2em;
+    width:auto;
+    height:8em;
+}
+
 div.modal-body{
     margin:2em;
+}
+
+.shrink{
+    background-color:red;
+}
+.shrink img{
+    display:none;
 }
