--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,4 +1,4 @@
-<img id="logo" src="img/logo.png"/>
+<img id="logo" src="http://4vector.com/i/free-vector-nintendo-logo_090577_Nintendo_logo.png"/>
 <div id="navigation-container" class="container" data-ng-controller="HeaderController">
     <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
