--- a/style/style.scss
+++ b/style/style.scss
@@ -28,15 +28,13 @@ body{
     padding:2em;
     width:auto;
     height:8em;
+     -webkit-transition: height 1s; /* For Safari 3.1 to 6.0 */
+    transition: height 1s;
 }
 
 div.modal-body{
     margin:2em;
 }
-
-.shrink{
-    background-color:red;
-}
 .shrink img{
-    display:none;
+    height:0px !important;
 }
